crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__future_annotations.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    name: UnusedImport
    body: "`models.Nut` imported but unused"
    suggestion: "Remove unused import: `models.Nut`"
    fixable: true
  location:
    row: 8
    column: 4
  end_location:
    row: 8
    column: 7
  fix:
    edits:
      - location:
          row: 6
          column: 0
        end_location:
          row: 9
          column: 1
        content: "from models import (\n    Fruit,\n)"
  parent:
    row: 6
    column: 0
- kind:
    name: UndefinedName
    body: "Undefined name `Bar`"
    suggestion: ~
    fixable: false
  location:
    row: 26
    column: 18
  end_location:
    row: 26
    column: 21
  fix:
    edits: []
  parent: ~

