crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__init.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
__init__.py:1:8: F401 [*] `os` imported but unused; consider adding to `__all__` or using a redundant alias
  |
1 | import os
  |        ^^ F401
2 | 
3 | print(__path__)
  |
  = help: Remove unused import: `os`

ℹ Suggested fix
1   |-import os
2 1 | 
3 2 | print(__path__)
4 3 | 


