crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__load_after_multiple_unbinds_from_module_scope.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
<filename>:7:26: F841 [*] Local variable `x` is assigned to but never used
  |
5 |     try:
6 |         pass
7 |     except ValueError as x:
  |                          ^ F841
8 |         pass
  |
  = help: Remove assignment to unused variable `x`

ℹ Fix
4 4 | def f():
5 5 |     try:
6 6 |         pass
7   |-    except ValueError as x:
  7 |+    except ValueError:
8 8 |         pass
9 9 | 
10 10 |     try:

<filename>:12:26: F841 [*] Local variable `x` is assigned to but never used
   |
10 |     try:
11 |         pass
12 |     except ValueError as x:
   |                          ^ F841
13 |         pass
   |
   = help: Remove assignment to unused variable `x`

ℹ Fix
9  9  | 
10 10 |     try:
11 11 |         pass
12    |-    except ValueError as x:
   12 |+    except ValueError:
13 13 |         pass
14 14 | 
15 15 |     # This should resolve to the `x` in `x = 1`.


