crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__multi_statement_lines.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
./resources/test/fixtures/pyflakes/multi_statement_lines.py:3:12: F401 [*] `foo1` imported but unused
  |
3 | if True:
4 |     import foo1; x = 1
  |            ^^^^ F401
5 |     import foo2;     x = 1
  |
  = help: Remove unused import: `foo1`

ℹ Suggested fix
1 1 | 
2 2 | if True:
3   |-    import foo1; x = 1
  3 |+    x = 1
4 4 |     import foo2;     x = 1
5 5 | 
6 6 | if True:

./resources/test/fixtures/pyflakes/multi_statement_lines.py:4:12: F401 [*] `foo2` imported but unused
  |
4 | if True:
5 |     import foo1; x = 1
6 |     import foo2;     x = 1
  |            ^^^^ F401
7 | 
8 | if True:
  |
  = help: Remove unused import: `foo2`

ℹ Suggested fix
1 1 | 
2 2 | if True:
3 3 |     import foo1; x = 1
4   |-    import foo2;     x = 1
  4 |+    x = 1
5 5 | 
6 6 | if True:
7 7 |     import foo3; \

./resources/test/fixtures/pyflakes/multi_statement_lines.py:7:12: F401 [*] `foo3` imported but unused
  |
7 | if True:
8 |     import foo3; \
  |            ^^^^ F401
9 | x = 1
  |
  = help: Remove unused import: `foo3`

ℹ Suggested fix
4 4 |     import foo2;     x = 1
5 5 | 
6 6 | if True:
7   |-    import foo3; \
8   |-x = 1
  7 |+    x = 1
9 8 | 
10 9 | if True:
11 10 |     import foo4 \

./resources/test/fixtures/pyflakes/multi_statement_lines.py:11:12: F401 [*] `foo4` imported but unused
   |
11 | if True:
12 |     import foo4 \
   |            ^^^^ F401
13 |         ; x = 1
   |
   = help: Remove unused import: `foo4`

ℹ Suggested fix
8  8  | x = 1
9  9  | 
10 10 | if True:
11    |-    import foo4 \
12    |-        ; x = 1
   11 |+    x = 1
13 12 | 
14 13 | 
15 14 | if True:

./resources/test/fixtures/pyflakes/multi_statement_lines.py:16:19: F401 [*] `foo5` imported but unused
   |
16 | if True:
17 |     x = 1; import foo5
   |                   ^^^^ F401
   |
   = help: Remove unused import: `foo5`

ℹ Suggested fix
13 13 | 
14 14 | 
15 15 | if True:
16    |-    x = 1; import foo5
   16 |+    x = 1; 
17 17 | 
18 18 | 
19 19 | if True:

./resources/test/fixtures/pyflakes/multi_statement_lines.py:21:17: F401 [*] `foo6` imported but unused
   |
21 | if True:
22 |     x = 1; \
23 |          import foo6
   |                 ^^^^ F401
   |
   = help: Remove unused import: `foo6`

ℹ Suggested fix
18 18 | 
19 19 | if True:
20 20 |     x = 1; \
21    |-         import foo6
   21 |+         
22 22 | 
23 23 | 
24 24 | if True:

./resources/test/fixtures/pyflakes/multi_statement_lines.py:26:18: F401 [*] `foo7` imported but unused
   |
26 | if True:
27 |     x = 1 \
28 |         ; import foo7
   |                  ^^^^ F401
   |
   = help: Remove unused import: `foo7`

ℹ Suggested fix
23 23 | 
24 24 | if True:
25 25 |     x = 1 \
26    |-        ; import foo7
   26 |+        ; 
27 27 | 
28 28 | 
29 29 | if True:

./resources/test/fixtures/pyflakes/multi_statement_lines.py:30:19: F401 [*] `foo8` imported but unused
   |
30 | if True:
31 |     x = 1; import foo8; x = 1
   |                   ^^^^ F401
32 |     x = 1;     import foo9;     x = 1
   |
   = help: Remove unused import: `foo8`

ℹ Suggested fix
27 27 | 
28 28 | 
29 29 | if True:
30    |-    x = 1; import foo8; x = 1
   30 |+    x = 1; x = 1
31 31 |     x = 1;     import foo9;     x = 1
32 32 | 
33 33 | if True:

./resources/test/fixtures/pyflakes/multi_statement_lines.py:31:23: F401 [*] `foo9` imported but unused
   |
31 | if True:
32 |     x = 1; import foo8; x = 1
33 |     x = 1;     import foo9;     x = 1
   |                       ^^^^ F401
34 | 
35 | if True:
   |
   = help: Remove unused import: `foo9`

ℹ Suggested fix
28 28 | 
29 29 | if True:
30 30 |     x = 1; import foo8; x = 1
31    |-    x = 1;     import foo9;     x = 1
   31 |+    x = 1;     x = 1
32 32 | 
33 33 | if True:
34 34 |     x = 1; \

./resources/test/fixtures/pyflakes/multi_statement_lines.py:35:16: F401 [*] `foo10` imported but unused
   |
35 | if True:
36 |     x = 1; \
37 |         import foo10; \
   |                ^^^^^ F401
38 |     x = 1
   |
   = help: Remove unused import: `foo10`

ℹ Suggested fix
32 32 | 
33 33 | if True:
34 34 |     x = 1; \
35    |-        import foo10; \
36    |-    x = 1
   35 |+        x = 1
37 36 | 
38 37 | if True:
39 38 |     x = 1 \

./resources/test/fixtures/pyflakes/multi_statement_lines.py:40:17: F401 [*] `foo11` imported but unused
   |
40 | if True:
41 |     x = 1 \
42 |         ;import foo11 \
   |                 ^^^^^ F401
43 |         ;x = 1
   |
   = help: Remove unused import: `foo11`

ℹ Suggested fix
37 37 | 
38 38 | if True:
39 39 |     x = 1 \
40    |-        ;import foo11 \
41 40 |         ;x = 1
42 41 | 
43 42 | 

./resources/test/fixtures/pyflakes/multi_statement_lines.py:46:8: F401 [*] `foo12` imported but unused
   |
46 | # Continuation, but not as the last content in the file.
47 | x = 1; \
48 | import foo12
   |        ^^^^^ F401
49 | 
50 | # Continuation, followed by end-of-file. (Removing `import foo` would cause a syntax
   |
   = help: Remove unused import: `foo12`

ℹ Suggested fix
43 43 | 
44 44 | # Continuation, but not as the last content in the file.
45 45 | x = 1; \
46    |-import foo12
47 46 | 
   47 |+
48 48 | # Continuation, followed by end-of-file. (Removing `import foo` would cause a syntax
49 49 | # error.)
50 50 | x = 1; \

./resources/test/fixtures/pyflakes/multi_statement_lines.py:51:8: F401 [*] `foo13` imported but unused
   |
51 | # error.)
52 | x = 1; \
53 | import foo13
   |        ^^^^^ F401
   |
   = help: Remove unused import: `foo13`

ℹ Suggested fix
48 48 | # Continuation, followed by end-of-file. (Removing `import foo` would cause a syntax
49 49 | # error.)
50 50 | x = 1; \
51    |-import foo13
   51 |+


