crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__print_after_shadowing_except.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
<filename>:7:25: F841 [*] Local variable `x` is assigned to but never used
  |
5 |     try:
6 |         1 / 0
7 |     except Exception as x:
  |                         ^ F841
8 |         pass
  |
  = help: Remove assignment to unused variable `x`

ℹ Fix
4 4 | 
5 5 |     try:
6 6 |         1 / 0
7   |-    except Exception as x:
  7 |+    except Exception:
8 8 |         pass
9 9 | 
10 10 |     print(x)

<filename>:10:11: F821 Undefined name `x`
   |
 8 |         pass
 9 | 
10 |     print(x)
   |           ^ F821
   |


